--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -4197,6 +4197,7 @@ table tbody tr:hover {
   display: inline-block;
 }
 .picker-modal-content-date.active + div.active {
+  height: 16.5rem;
   border-left: 0.0625rem solid #CFD5D9;
 }
 .picker-modal-content-date-months {
@@ -4220,6 +4221,9 @@ table tbody tr:hover {
   mask-position: center;
   background: #8B9094;
 }
+.picker-modal-content-date-months .date-prev:hover {
+  background: #64BBF6;
+}
 .picker-modal-content-date-months .date-text {
   display: table-cell;
   width: 16.5rem;
@@ -4241,6 +4245,9 @@ table tbody tr:hover {
   -webkit-mask-position: center;
   mask-position: center;
   background: #8B9094;
+}
+.picker-modal-content-date-months .date-next:hover {
+  background: #64BBF6;
 }
 .picker-modal-content-date-calendar {
   display: flex;
