--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -4852,6 +4852,7 @@ table[id=documentDisplay] td {
   display: inline-block;
 }
 .picker-modal-content-date.active + div.active {
+  height: 16.5rem;
   border-left: 0.0625rem solid #CFD5D9;
 }
 .picker-modal-content-date-months {
@@ -4875,6 +4876,9 @@ table[id=documentDisplay] td {
   mask-position: center;
   background: #8B9094;
 }
+.picker-modal-content-date-months .date-prev:hover {
+  background: #64BBF6;
+}
 .picker-modal-content-date-months .date-text {
   display: table-cell;
   width: 16.5rem;
@@ -4896,6 +4900,9 @@ table[id=documentDisplay] td {
   -webkit-mask-position: center;
   mask-position: center;
   background: #8B9094;
+}
+.picker-modal-content-date-months .date-next:hover {
+  background: #64BBF6;
 }
 .picker-modal-content-date-calendar {
   display: flex;
