--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -207,6 +207,7 @@
                         let chartInfo = setChartInfo()
                         restSubmit('post', '/rest/charts/' + chartId + '/preview', chartInfo, function (response) {
                             let responseJson = JSON.parse(response);
+                            setChart(responseJson.chartType, responseJson.propertyJson);
                             parsedPropertyJson(responseJson.chartConfig, responseJson.propertyJson);
                         }, false);
                     }
@@ -285,7 +286,7 @@
                             placeholder: i18n.msg('token.msg.tag')
                         });
                     } else if (target === 'view') {
-                        setChart(chartType);
+                        setChart(chartType, document.getElementById('propertyJson').value);
                     }
                     if (chartId !== undefined) {
                         parsedPropertyJson(document.getElementById('chartConfig').value, document.getElementById('propertyJson').value);
@@ -358,6 +359,13 @@
         }
 
         function setDisplay(value) {
+            // 연산자 박스 출력
+            if (value === ACTIVITY_GAUGE_CHART) {
+                document.getElementById('operationSelectBox').options[0].style.display = 'none';
+                document.getElementById('operationSelectBox').options[1].selected = true;
+            } else {
+                document.getElementById('operationSelectBox').options[0].style.display = 'block';
+            }
             if (value === BASIC_LINE_CHART || value === STACKED_COLUMN_CHART) {
                 document.getElementById('periodUnitLabel').style.display = 'block';
                 document.getElementById('periodUnitSelectBox').style.display = 'block';
@@ -375,11 +383,11 @@
                 document.getElementById('targetGroup').style.display = 'none';
             }
             // 차트 새로 그리기
-            setChart(value);
+            setChart(value, document.getElementById('propertyJson').value);
         }
 
         /** 하이차트 초기화 */
-        function setChart(chartType) {
+        function setChart(chartType, property) {
             // highcharts 기본 옵션
             let options = {
                 chart: {type: 'line'},
@@ -511,8 +519,8 @@
                         background: []
                     }
 
-                    let propertyJson = JSON.parse(document.getElementById('propertyJson').value);
                     let docKeyList = [];
+                    let propertyJson = JSON.parse(property);
                     for (let key in propertyJson[1].documentList) {
                         docKeyList.push(key);
                     }
