--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -1511,47 +1511,49 @@ label {
   mask-position: center;
   background: #8B9094;
 }
-.z-input.search {
+.z-input.i-search {
   background-image: url("../media/icons/icon_search.svg");
   background-size: auto;
   background-repeat: no-repeat;
   background-position-x: calc(100% - 0.4375rem);
   background-position-y: 50%;
 }
-.z-input.search-date, .z-input.date-picker {
+.z-input.i-search-date, .z-input.i-date-picker {
   background-image: url("../media/icons/icon_date_picker.svg");
   background-size: auto;
   background-repeat: no-repeat;
   background-position-x: calc(100% - 0.4375rem);
   background-position-y: 50%;
 }
-.z-input.time-picker {
+.z-input.i-time-picker {
   background-image: url("../media/icons/icon_time_picker.svg");
   background-size: auto;
   background-repeat: no-repeat;
   background-position-x: calc(100% - 0.4375rem);
   background-position-y: 50%;
 }
-.z-input.datetime-picker {
+.z-input.i-datetime-picker {
   background-image: url("../media/icons/icon_date_time_picker.svg");
   background-size: auto;
   background-repeat: no-repeat;
   background-position-x: calc(100% - 0.4375rem);
   background-position-y: 50%;
 }
-.z-input.px {
+.z-input.i-px {
   background-image: url("../media/icons/icon_px.svg");
   background-size: auto;
   background-repeat: no-repeat;
   background-position-x: calc(100% - 0.4375rem);
   background-position-y: 50%;
+  background-color: #8B9094;
 }
-.z-input.mb {
+.z-input.i-mb {
   background-image: url("../media/icons/icon_mb.svg");
   background-size: auto;
   background-repeat: no-repeat;
   background-position-x: calc(100% - 0.4375rem);
   background-position-y: 50%;
+  background-color: #8B9094;
 }
 .z-input-button {
   position: relative;
@@ -2459,7 +2461,7 @@ svg path.connector.hidden {
 .z-button-icon.light-primary:enabled:active,
 .z-button-icon.light-primary:enabled.active {
   color: #FFFFFF;
-  background-colop: #2578CE;
+  background-color: #2578CE;
   border-color: #1959AC;
 }
 .z-button.light-primary:enabled:active .z-icon, .z-button.light-primary:enabled.active .z-icon,
@@ -2515,7 +2517,7 @@ svg path.connector.hidden {
 .z-button-icon.light-secondary:enabled:active,
 .z-button-icon.light-secondary:enabled.active {
   color: #FFFFFF;
-  background-colop: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.4);
   border-color: #FFFFFF;
 }
 .z-button.light-secondary:enabled:active .z-icon, .z-button.light-secondary:enabled.active .z-icon,
@@ -2570,7 +2572,7 @@ svg path.connector.hidden {
 .z-button-icon.light-extra:enabled:active,
 .z-button-icon.light-extra:enabled.active {
   color: #FFFFFF;
-  background-colop: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.4);
   border-color: rgba(255, 255, 255, 0.4);
 }
 .z-button.light-extra:enabled:active .z-icon, .z-button.light-extra:enabled.active .z-icon,
@@ -2626,7 +2628,7 @@ svg path.connector.hidden {
 .z-button-icon.light-form:enabled:active,
 .z-button-icon.light-form:enabled.active {
   color: #424242;
-  background-colop: #E0E0E0;
+  background-color: #E0E0E0;
   border-color: #BDBDBD;
 }
 .z-button.light-form:enabled:active .z-icon, .z-button.light-form:enabled.active .z-icon,
