#10914 Date / Time / DateTime picker 디자인 적용
- prefix i- 추가

--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -1448,7 +1448,7 @@ label {
   background-position-x: calc(100% - 0.4375rem);
   background-position-y: 50%;
 }
-.z-input.i-search-date, .z-input.i-date-picker {
+.z-input.i-date-picker {
   background-image: url("../media/icons/icon_date_picker.svg");
   background-size: auto;
   background-repeat: no-repeat;
@@ -1475,7 +1475,6 @@ label {
   background-repeat: no-repeat;
   background-position-x: calc(100% - 0.4375rem);
   background-position-y: 50%;
-  background-color: #8B9094;
 }
 .z-input.i-mb {
   background-image: url("../media/icons/icon_mb.svg");
@@ -1483,7 +1482,6 @@ label {
   background-repeat: no-repeat;
   background-position-x: calc(100% - 0.4375rem);
   background-position-y: 50%;
-  background-color: #8B9094;
 }
 .z-input-button {
   position: relative;
