--- a/src/main/resources/public/template/board/boardView.html
+++ b/src/main/resources/public/template/board/boardView.html
@@ -101,7 +101,7 @@
             </div>
             <div class="flex-column z-edit-row">
                 <label th:text="#{board.label.attachFileSize}" for="attachFileSize"></label>
-                <input class="z-input col-6 mb" id="attachFileSize" name="attachFileSize" type="text"
+                <input class="z-input col-6 i-mb" id="attachFileSize" name="attachFileSize" type="text"
                        th:value="${boardAdmin?.attachFileSize}" maxlength="4" disabled/>
             </div>
             <div class="flex-row justify-content-start z-edit-row">
