--- a/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
+++ b/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
@@ -14,7 +14,7 @@
             <h6 class="description ml-2" th:text="#{pattern.msg.editDescription}"></h6>
         </div>
         <div class="header-search flex-row">
-            <input type="text" class="z-input search col-5 mr-2" id="search" name="search" maxlength="100"
+            <input type="text" class="z-input i-search col-5 mr-2" id="search" name="search" maxlength="100"
                    th:placeholder="#{pattern.msg.searchPlaceholder}"/>
             <span id="totalCount" class="search-count"></span>
             <div class="ml-auto">
