--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -14,7 +14,7 @@
                 <h6 class="description ml-2" th:text="#{image.msg.searchDescription}"></h6>
             </div>
             <div class="header-search flex-row">
-                <input type="text" class="z-input search col-5 mr-2" id="searchValue" name="searchValue" maxlength="100"
+                <input type="text" class="z-input i-search col-5 mr-2" id="searchValue" name="searchValue" maxlength="100"
                        th:placeholder="#{image.label.name}"/>
                 <span id="totalCount" class="search-count"></span>
             </div>
