--- a/src/main/resources/public/template/portal/notice/noticeSearch.html
+++ b/src/main/resources/public/template/portal/notice/noticeSearch.html
@@ -15,12 +15,12 @@
         </div>
         <div class="notice-search">
             <form id="searchFrm">
-                <input type="text" class="z-input search col-5" id="searchValue" name="searchValue" maxlength="100"
+                <input type="text" class="z-input i-search col-5" id="searchValue" name="searchValue" maxlength="100"
                        th:placeholder="#{notice.label.searchPlaceholder}"/>
-                <input type="text" class="z-input search-date icon-date col-3" id="fromDt" name="fromDt"/>
+                <input type="text" class="z-input i-date-picker search-date col-3" id="fromDt" name="fromDt"/>
                 <span>~</span>
-                <input type="text" class="z-input search-date icon-date col-3 mr-2" id="searchToDt" name="searchToDt"/>
-                <input type="hidden" class="search-date icon-date" id="toDt" name="toDt" readonly="readonly"/>
+                <input type="text" class="z-input i-date-picker search-date col-3 mr-2" id="searchToDt" name="searchToDt"/>
+                <input type="hidden" class="search-date" id="toDt" name="toDt" readonly="readonly"/>
                 <span id="spanTotalCount" class="search-count"></span>
             </form>
         </div>
