--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -17,7 +17,7 @@
         <div class="header-search flex-row">
             <input type="hidden" id="updatable" th:value="${#authorization.expression('hasAuthority(''process.update'')')}"/>
             <form id="searchFrm">
-                <input type="text" id="search" name="search" class="z-input search col-5 mr-2"  maxlength="100"
+                <input type="text" id="search" name="search" class="z-input i-search col-5 mr-2"  maxlength="100"
                        th:placeholder="#{process.label.searchPlaceholder}"/>
                 <span id="spanTotalCount" class="search-count"></span>
             </form>
