--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -14,7 +14,7 @@
             <h6 class="description ml-2" th:text="#{role.msg.editDescription}"></h6>
         </div>
         <div class="header-search flex-row">
-            <input type="text" class="z-input search col-5 mr-2" id="search" name="search" maxlength="100" th:placeholder="#{role.msg.searchPlaceholder}"/>
+            <input type="text" class="z-input i-search col-5 mr-2" id="search" name="search" maxlength="100" th:placeholder="#{role.msg.searchPlaceholder}"/>
             <span id="totalCount" class="search-count"></span>
             <div class="ml-auto">
                 <button type="button" class="z-button secondary" id="btnSearch" name="btnSearch" onclick="onCreate();"
