--- a/src/main/resources/public/scss/template/_date-picker.scss
+++ b/src/main/resources/public/scss/template/_date-picker.scss
@@ -63,7 +63,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    flex-wrap: wrap;
+    //flex-wrap: wrap;
     @include border($datepicker-border-width, solid, $datepicker-border-color, bottom);
     padding: 1rem 0 1rem 0; // 16px 0 16px 0
     
