--- a/src/main/resources/public/template/workflow/workFlowEditModal.html
+++ b/src/main/resources/public/template/workflow/workFlowEditModal.html
@@ -80,11 +80,12 @@
                 <option value="false" th:text="#{document.label.disable}" th:selected="${documentData?.apiEnable == null || documentData?.apiEnable == false}"></option>
             </select>
             <!-- 업무 흐름 색상 -->
-            <label class="field-label" for="document-color">
+            <label class="field-label" for="documentColor">
                 <span th:text="#{document.label.businessFlowColor}"></span>
                 <span class="required"></span>
             </label>
-            <div class="color-picker">
+            <input type="text" id="documentColor" th:value="${documentData?.documentColor}"/>
+            <!--<div class="color-picker">
                 <div class="color-input">
                     <div class="selected-color-box">
                         <div id="selected-color" name="selected-color" class="selected-color"></div>
@@ -96,7 +97,7 @@
                     <div id="document-colorPalette" name="document-colorPalette" class="color-palette"></div>
                     <div id="document-colorPalette-opacity" name="document-colorPalette-opacity" class="color-palette-opacity"></div>
                 </div>
-            </div>
+            </div>-->
             <!-- 신청서 아이콘 -->
             <div id="document-icon-content" class="document-icon-content" th:classappend="${documentData?.documentType != 'workflow'} ? 'on'">
                 <label class="field-label" for="document-icon" th:text="#{document.label.icon}"></label>
