#10914 Date / Time / DateTime picker 디자인 적용
- MR feedback

--- a/src/main/resources/public/scss/template/_date-picker.scss
+++ b/src/main/resources/public/scss/template/_date-picker.scss
@@ -14,7 +14,7 @@
   display: none;
   @include fixed();
   min-width: 12.5rem; // 200px
-  font-family: inherit;
+  font-family: $datepicker-font-family;
   font-size: $datepicker-font-size;
   font-weight: $datepicker-font-weight;
   line-height: $datepicker-line-height;
