--- a/src/main/resources/public/scss/template/_variables.scss
+++ b/src/main/resources/public/scss/template/_variables.scss
@@ -324,8 +324,9 @@ $avatar-desc-font-color:                     $gray;
 $avatar-desc-font-weight:                    $font-weight-regular;
 
 ///////////////////////////////// date picker /////////////////////////////////
+$datepicker-font-color:                      $gray800;
+$datepicker-font-family:                     $font-family-s;
 $datepicker-font-size:                       $font-size-xs;
-$datepicker-font-color:                      map-get($grays, 'dark');
 $datepicker-font-weight:                     $font-weight-regular;
 $datepicker-line-height:                     1.2;
 $datepicker-bg-color:                        $white;
